; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/ulp/isert/extr_ib_isert.c_isert_aborted_task.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/ulp/isert/extr_ib_isert.c_isert_aborted_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iscsi_conn = type { i32, %struct.isert_conn* }
%struct.isert_conn = type { i32 }
%struct.iscsi_cmd = type { i64, i32 }
%struct.isert_cmd = type { i32 }

@DMA_TO_DEVICE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iscsi_conn*, %struct.iscsi_cmd*)* @isert_aborted_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @isert_aborted_task(%struct.iscsi_conn* %0, %struct.iscsi_cmd* %1) #0 {
  %3 = alloca %struct.iscsi_conn*, align 8
  %4 = alloca %struct.iscsi_cmd*, align 8
  %5 = alloca %struct.isert_cmd*, align 8
  %6 = alloca %struct.isert_conn*, align 8
  store %struct.iscsi_conn* %0, %struct.iscsi_conn** %3, align 8
  store %struct.iscsi_cmd* %1, %struct.iscsi_cmd** %4, align 8
  %7 = load %struct.iscsi_cmd*, %struct.iscsi_cmd** %4, align 8
  %8 = call %struct.isert_cmd* @iscsit_priv_cmd(%struct.iscsi_cmd* %7)
  store %struct.isert_cmd* %8, %struct.isert_cmd** %5, align 8
  %9 = load %struct.iscsi_conn*, %struct.iscsi_conn** %3, align 8
  %10 = getelementptr inbounds %struct.iscsi_conn, %struct.iscsi_conn* %9, i32 0, i32 1
  %11 = load %struct.isert_conn*, %struct.isert_conn** %10, align 8
  store %struct.isert_conn* %11, %struct.isert_conn** %6, align 8
  %12 = load %struct.iscsi_conn*, %struct.iscsi_conn** %3, align 8
  %13 = getelementptr inbounds %struct.iscsi_conn, %struct.iscsi_conn* %12, i32 0, i32 0
  %14 = call i32 @spin_lock_bh(i32* %13)
  %15 = load %struct.iscsi_cmd*, %struct.iscsi_cmd** %4, align 8
  %16 = getelementptr inbounds %struct.iscsi_cmd, %struct.iscsi_cmd* %15, i32 0, i32 1
  %17 = call i32 @list_empty(i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %23, label %19

19:                                               ; preds = %2
  %20 = load %struct.iscsi_cmd*, %struct.iscsi_cmd** %4, align 8
  %21 = getelementptr inbounds %struct.iscsi_cmd, %struct.iscsi_cmd* %20, i32 0, i32 1
  %22 = call i32 @list_del_init(i32* %21)
  br label %23

23:                                               ; preds = %19, %2
  %24 = load %struct.iscsi_conn*, %struct.iscsi_conn** %3, align 8
  %25 = getelementptr inbounds %struct.iscsi_conn, %struct.iscsi_conn* %24, i32 0, i32 0
  %26 = call i32 @spin_unlock_bh(i32* %25)
  %27 = load %struct.iscsi_cmd*, %struct.iscsi_cmd** %4, align 8
  %28 = getelementptr inbounds %struct.iscsi_cmd, %struct.iscsi_cmd* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* @DMA_TO_DEVICE, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %35

32:                                               ; preds = %23
  %33 = load %struct.iscsi_cmd*, %struct.iscsi_cmd** %4, align 8
  %34 = call i32 @iscsit_stop_dataout_timer(%struct.iscsi_cmd* %33)
  br label %35

35:                                               ; preds = %32, %23
  %36 = load %struct.isert_cmd*, %struct.isert_cmd** %5, align 8
  %37 = load %struct.isert_conn*, %struct.isert_conn** %6, align 8
  %38 = call i32 @isert_rdma_rw_ctx_destroy(%struct.isert_cmd* %36, %struct.isert_conn* %37)
  ret void
}

declare dso_local %struct.isert_cmd* @iscsit_priv_cmd(%struct.iscsi_cmd*) #1

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @list_empty(i32*) #1

declare dso_local i32 @list_del_init(i32*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1

declare dso_local i32 @iscsit_stop_dataout_timer(%struct.iscsi_cmd*) #1

declare dso_local i32 @isert_rdma_rw_ctx_destroy(%struct.isert_cmd*, %struct.isert_conn*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
